updating linux confs

--- a/util/linux/etc/wiki.conf
+++ b/util/linux/etc/wiki.conf
@@ -1,6 +1,6 @@
 ## configuration file for wiki script
 
 USER=user
-CONF=/home/$user/wiki/
+CONF=/home/$USER/wiki/wiki.conf
 GOWIK=/usr/local/bin/gowik
 
